remove sweep configs

--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -204,36 +204,30 @@
    },
    "outputs": [],
    "source": [
-    "def train(config, loss_fn):\n",
-    "    # initialize a wandb run\n",
-    "    wandb.init(config = config, name = '3D CNN Testing')\n",
-    "\n",
-    "    # copy the config\n",
-    "    config = wandb.config\n",
-    "    \n",
-    "    print('config:', config)\n",
+    "def train(args, loss_fn):\n",
+    "    print(f'3DCNN_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}')\n",
     "\n",
     "    # get training loader\n",
-    "    training_loader = DataLoader(dataset, batch_size = config.batch_size, shuffle = False)\n",
+    "    training_loader = DataLoader(dataset, batch_size = args.batch_size, shuffle = False)\n",
     "\n",
     "    # initialize model\n",
-    "    if config.activation_fn == 'ReLU':\n",
+    "    if args.activation_fn == 'ReLU':\n",
     "        activation_fn = nn.ReLU()\n",
     "    \n",
-    "    if config.activation_fn == 'Sigmoid':\n",
+    "    if args.activation_fn == 'Sigmoid':\n",
     "        activation_fn = nn.Sigmoid()\n",
     "    \n",
-    "    model = ConvNetScalarLabel(kernel_size = config.kernel_size, activation_fn = activation_fn).to(device)\n",
+    "    model = ConvNetScalarLabel(kernel_size = args.kernel_size, activation_fn = activation_fn).to(device)\n",
     "    print(count_parameters(model))\n",
     "    \n",
-    "    optimizer = torch.optim.SGD(model.parameters(), lr = config.learning_rate, momentum = 0.9)\n",
+    "    optimizer = torch.optim.SGD(model.parameters(), lr = args.learning_rate, momentum = 0.9)\n",
     "\n",
-    "    for epoch in range(config.epochs_choice):\n",
+    "    for epoch in range(args.epochs_choice):\n",
     "        tic = time.time()\n",
     "        train_loss, cumulative_loss = train_epoch(model, training_loader, optimizer, loss_fn)\n",
     "        toc = time.time()\n",
-    "        wandb.log({'train_loss': train_loss, 'cumulative_loss': cumulative_loss * config.batch_size, 'time': round(toc - tic)})\n",
-    "        print(f'Train loss for epoch {epoch}: {train_loss}, cumulative loss for epoch {epoch}: {cumulative_loss * config.batch_size}, time for epoch {epoch}: {round(toc - tic)}')\n",
+    "        wandb.log({'train_loss': train_loss, 'cumulative_loss': cumulative_loss * args.batch_size, 'time': round(toc - tic)})\n",
+    "        print(f'Train loss for epoch {epoch}: {train_loss}, cumulative loss for epoch {epoch}: {cumulative_loss * args.batch_size}, time for epoch {epoch}: {round(toc - tic)}')\n",
     "    \n",
     "    return model"
    ]
@@ -247,12 +241,10 @@
    },
    "outputs": [],
    "source": [
-    "def validate(config, model, loss_fn):\n",
-    "    # copy the config\n",
-    "    config = wandb.config\n",
+    "def validate(args, model, loss_fn):\n",
     "    \n",
     "    # get validation loader\n",
-    "    validation_loader = DataLoader(dataset_val, batch_size = config.batch_size, shuffle = False)\n",
+    "    validation_loader = DataLoader(dataset_val, batch_size = args.batch_size, shuffle = False)\n",
     "    \n",
     "    validation_loss = 0.0\n",
     "    y_true = []\n",
@@ -279,11 +271,14 @@
    },
    "outputs": [],
    "source": [
-    "def evaluate(config = None):\n",
+    "def evaluate(args = None):\n",
+    "    # initialize a wandb run\n",
+    "    wandb.init(name = f'3DCNN_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}', project = 'PAPER')\n",
+    "    \n",
     "    loss_fn = nn.L1Loss(reduction = 'mean')\n",
-    "    model = train(config, loss_fn)\n",
+    "    model = train(args, loss_fn)\n",
     "    torch.save(model, 'model.pt')\n",
-    "    validation_loss, r2 = validate(config, model, loss_fn)\n",
+    "    validation_loss, r2 = validate(args, model, loss_fn)\n",
     "    wandb.log({'validation_loss': validation_loss, 'r2': r2})"
    ]
   },
@@ -312,45 +307,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2403886e-355f-4658-8199-aebb835516bd",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "sweep_config = {\n",
-    "    'method': 'grid'\n",
-    "    }\n",
-    "metric = {\n",
-    "    'name': 'validation_loss',\n",
-    "    'goal': 'minimize'\n",
-    "    }\n",
-    "sweep_config['metric'] = metric\n",
-    "\n",
-    "parameters_dict = {\n",
-    "    'kernel_size': {\n",
-    "        'values': [args.kernel_size]\n",
-    "    },\n",
-    "    'activation_fn': {\n",
-    "        'values': [args.activation_fn]\n",
-    "    },\n",
-    "    'epochs_choice': {\n",
-    "          'values': [args.epochs_choice]\n",
-    "    },\n",
-    "    'learning_rate': {\n",
-    "        'values': [args.learning_rate]\n",
-    "    },\n",
-    "    'batch_size': {\n",
-    "        'values': [args.batch_size]\n",
-    "    },\n",
-    "}\n",
-    "\n",
-    "sweep_config['parameters'] = parameters_dict"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "83411fe0-67e5-49c3-b22a-9d5ac1f5abd1",
    "metadata": {},
@@ -361,25 +317,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74f5fe4f-57a0-4445-aaec-58183fb12613",
-   "metadata": {
-    "tags": []
-   },
+   "id": "6d1bc578-9432-4dab-88eb-91bafacf5146",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "sweep_id = wandb.sweep(sweep_config, project = 'PAPER')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fec8f8da-e378-4181-8bcc-fc83a0a26754",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "wandb.agent(sweep_id = sweep_id, function = evaluate)"
+    "evaluate(args = args)"
    ]
   }
  ],
