--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -321,7 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(args = args)"
+    "evaluate(args = args)\n",
+    "wandb.finish()"
    ]
   }
  ],
