add hyperparameter logging for wandb

--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -205,8 +205,7 @@
    "outputs": [],
    "source": [
     "def train(args, loss_fn):\n",
-    "    print(f'3DCNN_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}')\n",
-    "\n",
+    "    \n",
     "    # get training loader\n",
     "    training_loader = DataLoader(dataset, batch_size = args.batch_size, shuffle = False)\n",
     "\n",
@@ -272,8 +271,20 @@
    "outputs": [],
    "source": [
     "def evaluate(args = None):\n",
+    "    training_set = train_parts[5:-5]\n",
+    "    name = f'3DCNN_{training_set}_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}'\n",
+    "    print(name)\n",
     "    # initialize a wandb run\n",
-    "    wandb.init(name = f'3DCNN_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}', project = 'PAPER')\n",
+    "    wandb.init(name = name, project = 'PAPER')\n",
+    "\n",
+    "    # logging training settings\n",
+    "    wandb.config.kernel_size = args.kernel_size\n",
+    "    wandb.config.activation_fn = args.activation_fn\n",
+    "    wandb.config.epochs_choice = args.epochs_choice\n",
+    "    wandb.config.learning_rate = args.learning_rate\n",
+    "    wandb.config.batch_size = args.batch_size\n",
+    "    # filename of the training set, '10000' in 'data/10000.json' for example\n",
+    "    wandb.config.training_set = training_set\n",
     "    \n",
     "    loss_fn = nn.L1Loss(reduction = 'mean')\n",
     "    model = train(args, loss_fn)\n",
