--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -274,17 +274,18 @@
     "    training_set = train_parts[5:-5]\n",
     "    name = f'3DCNN_{training_set}_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}'\n",
     "    print(name)\n",
-    "    # initialize a wandb run\n",
-    "    wandb.init(name = name, project = 'PAPER')\n",
     "\n",
-    "    # logging training settings\n",
-    "    wandb.config.kernel_size = args.kernel_size\n",
-    "    wandb.config.activation_fn = args.activation_fn\n",
-    "    wandb.config.epochs_choice = args.epochs_choice\n",
-    "    wandb.config.learning_rate = args.learning_rate\n",
-    "    wandb.config.batch_size = args.batch_size\n",
-    "    # filename of the training set, '10000' in 'data/10000.json' for example\n",
-    "    wandb.config.training_set = training_set\n",
+    "    config = {\n",
+    "        # filename of the training set, '10000' in 'data/10000.json' for example\n",
+    "        'training_set': training_set,\n",
+    "        'kernel_size': args.kernel_size,\n",
+    "        'activation_fn': args.activation_fn,\n",
+    "        'epochs_choice': args.epochs_choice,\n",
+    "        'learning_rate': args.learning_rate,\n",
+    "        'batch_size': args.batch_size\n",
+    "    }\n",
+    "    # initialize a wandb run\n",
+    "    wandb.init(name = name, project = 'PAPER', config = config)\n",
     "    \n",
     "    loss_fn = nn.L1Loss(reduction = 'mean')\n",
     "    model = train(args, loss_fn)\n",
