validate after each epoch, refractoring

--- a/U-Net/Savio_3D_CNN.ipynb
+++ b/U-Net/Savio_3D_CNN.ipynb
@@ -165,7 +165,7 @@
    },
    "outputs": [],
    "source": [
-    "def train_epoch(model, training_loader, optimizer, loss_fn):\n",
+    "def train_epoch(model, training_loader, loss_fn, optimizer):\n",
     "    cumulative_loss = 0.0\n",
     "    for i, data in enumerate(training_loader):\n",
     "        inputs, labels = data\n",
@@ -191,44 +191,7 @@
     "        cumulative_loss += loss.item()\n",
     "        \n",
     "        wandb.log({'batch loss': loss.item()})\n",
-    "    return cumulative_loss / len(training_loader), cumulative_loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af6093e9-59db-4985-91a0-cf5d2bb9b3e7",
-   "metadata": {
-    "id": "af6093e9-59db-4985-91a0-cf5d2bb9b3e7",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def train(args, loss_fn):\n",
-    "    \n",
-    "    # get training loader\n",
-    "    training_loader = DataLoader(dataset, batch_size = args.batch_size, shuffle = False)\n",
-    "\n",
-    "    # initialize model\n",
-    "    if args.activation_fn == 'ReLU':\n",
-    "        activation_fn = nn.ReLU()\n",
-    "    \n",
-    "    if args.activation_fn == 'Sigmoid':\n",
-    "        activation_fn = nn.Sigmoid()\n",
-    "    \n",
-    "    model = ConvNetScalarLabel(kernel_size = args.kernel_size, activation_fn = activation_fn).to(device)\n",
-    "    print(count_parameters(model))\n",
-    "    \n",
-    "    optimizer = torch.optim.SGD(model.parameters(), lr = args.learning_rate, momentum = 0.9)\n",
-    "\n",
-    "    for epoch in range(args.epochs_choice):\n",
-    "        tic = time.time()\n",
-    "        train_loss, cumulative_loss = train_epoch(model, training_loader, optimizer, loss_fn)\n",
-    "        toc = time.time()\n",
-    "        wandb.log({'train_loss': train_loss, 'cumulative_loss': cumulative_loss * args.batch_size, 'time': round(toc - tic)})\n",
-    "        print(f'Train loss for epoch {epoch}: {train_loss}, cumulative loss for epoch {epoch}: {cumulative_loss * args.batch_size}, time for epoch {epoch}: {round(toc - tic)}')\n",
-    "    \n",
-    "    return model"
+    "    return cumulative_loss / len(training_loader)"
    ]
   },
   {
@@ -240,11 +203,7 @@
    },
    "outputs": [],
    "source": [
-    "def validate(args, model, loss_fn):\n",
-    "    \n",
-    "    # get validation loader\n",
-    "    validation_loader = DataLoader(dataset_val, batch_size = args.batch_size, shuffle = False)\n",
-    "    \n",
+    "def validate(model, validation_loader, loss_fn):\n",
     "    validation_loss = 0.0\n",
     "    y_true = []\n",
     "    y_pred = []\n",
@@ -264,13 +223,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "af6093e9-59db-4985-91a0-cf5d2bb9b3e7",
+   "metadata": {
+    "id": "af6093e9-59db-4985-91a0-cf5d2bb9b3e7",
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def evaluate(args, loss_fn):\n",
+    "    \n",
+    "    # get training loader\n",
+    "    training_loader = DataLoader(dataset, batch_size = args.batch_size, shuffle = False)\n",
+    "\n",
+    "    # get validation loader\n",
+    "    validation_loader = DataLoader(dataset_val, batch_size = args.batch_size, shuffle = False)\n",
+    "\n",
+    "    # initialize model\n",
+    "    if args.activation_fn == 'ReLU':\n",
+    "        activation_fn = nn.ReLU()\n",
+    "    \n",
+    "    if args.activation_fn == 'Sigmoid':\n",
+    "        activation_fn = nn.Sigmoid()\n",
+    "    \n",
+    "    model = ConvNetScalarLabel(kernel_size = args.kernel_size, activation_fn = activation_fn).to(device)\n",
+    "    print(count_parameters(model))\n",
+    "    \n",
+    "    optimizer = torch.optim.SGD(model.parameters(), lr = args.learning_rate, momentum = 0.9)\n",
+    "\n",
+    "    for epoch in range(args.epochs_choice):\n",
+    "        wandb.log({'epoch': epoch})\n",
+    "        # train\n",
+    "        tic = time.time()\n",
+    "        train_loss = train_epoch(model, training_loader, loss_fn, optimizer)\n",
+    "        toc = time.time()\n",
+    "        wandb.log({'train_loss': train_loss, 'train_time': round(toc - tic)})\n",
+    "        print(f'Train loss for epoch {epoch}: {train_loss}, cumulative loss for epoch {epoch}: {cumulative_loss * args.batch_size}, train time for epoch {epoch}: {round(toc - tic)}')\n",
+    "\n",
+    "        # validate\n",
+    "        tic = time.time()\n",
+    "        validation_loss, r2 = validate(model, validation_loader, loss_fn)\n",
+    "        toc = time.time()\n",
+    "        wandb.log({'validation_loss': validation_loss, 'r2': r2, 'validate_time': round(toc - tic)})\n",
+    "        print(f'Validate loss for epoch {epoch}: {validation_loss}, r2 for epoch {epoch}: {r2}, validate time for epoch {epoch}: {round(toc - tic)}')\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f45e5a4d-fe1f-4629-a456-1865f7e9906b",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def evaluate(args = None):\n",
+    "def run(args = None):\n",
     "    training_set = train_parts[5:-5]\n",
     "    name = f'3DCNN_{training_set}_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}'\n",
     "    print(name)\n",
@@ -282,16 +290,15 @@
     "        'activation_fn': args.activation_fn,\n",
     "        'epochs_choice': args.epochs_choice,\n",
     "        'learning_rate': args.learning_rate,\n",
-    "        'batch_size': args.batch_size\n",
+    "        'batch_size': args.batch_size,\n",
+    "        'architecture': '3DCNN_256_stride1'\n",
     "    }\n",
     "    # initialize a wandb run\n",
     "    wandb.init(name = name, project = 'PAPER', config = config)\n",
     "    \n",
     "    loss_fn = nn.L1Loss(reduction = 'mean')\n",
-    "    model = train(args, loss_fn)\n",
-    "    torch.save(model, 'model.pt')\n",
-    "    validation_loss, r2 = validate(args, model, loss_fn)\n",
-    "    wandb.log({'validation_loss': validation_loss, 'r2': r2})"
+    "    model = evaluate(args, loss_fn)\n",
+    "    torch.save(model, 'model.pt')"
    ]
   },
   {
@@ -299,7 +306,7 @@
    "id": "06b3855e-1af6-4dac-a2eb-9afca254bdcd",
    "metadata": {},
    "source": [
-    "# Training settings"
+    "# Parsing parameters"
    ]
   },
   {
@@ -333,7 +340,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(args = args)\n",
+    "run(args = args)\n",
     "wandb.finish()"
    ]
   }
