turn on shuffle for dataset

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -233,10 +233,10 @@
     "def evaluate(args, loss_fn):\n",
     "    \n",
     "    # get training loader\n",
-    "    training_loader = DataLoader(dataset, batch_size = args.batch_size, shuffle = False)\n",
+    "    training_loader = DataLoader(dataset, batch_size = args.batch_size, shuffle = True)\n",
     "\n",
     "    # get validation loader\n",
-    "    validation_loader = DataLoader(dataset_val, batch_size = args.batch_size, shuffle = False)\n",
+    "    validation_loader = DataLoader(dataset_val, batch_size = args.batch_size, shuffle = True)\n",
     "\n",
     "    # initialize model\n",
     "    if args.activation_fn == 'ReLU':\n",
