remove cumulative loss logging

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -257,7 +257,7 @@
     "        train_loss = train_epoch(model, training_loader, loss_fn, optimizer)\n",
     "        toc = time.time()\n",
     "        wandb.log({'train_loss': train_loss, 'train_time': round(toc - tic)})\n",
-    "        print(f'Train loss for epoch {epoch}: {train_loss}, cumulative loss for epoch {epoch}: {cumulative_loss * args.batch_size}, train time for epoch {epoch}: {round(toc - tic)}')\n",
+    "        print(f'Train loss for epoch {epoch}: {train_loss}, train time for epoch {epoch}: {round(toc - tic)}')\n",
     "\n",
     "        # validate\n",
     "        tic = time.time()\n",
