switch to tqdm for progress

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -26,7 +26,8 @@
     "from Savio_Dataset import CustomDataset\n",
     "from Networks import ConvNetScalarLabel, count_parameters\n",
     "import time\n",
-    "import argparse"
+    "import argparse\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -167,7 +168,7 @@
    "source": [
     "def train_epoch(model, training_loader, loss_fn, optimizer):\n",
     "    cumulative_loss = 0.0\n",
-    "    for i, data in enumerate(training_loader):\n",
+    "    for i, data in enumerate(tqdm(training_loader)):\n",
     "        inputs, labels = data\n",
     "        inputs = inputs.to(device)\n",
     "        labels = labels.to(device)\n",
@@ -207,7 +208,7 @@
     "    validation_loss = 0.0\n",
     "    y_true = []\n",
     "    y_pred = []\n",
-    "    for i, data in enumerate(validation_loader):\n",
+    "    for i, data in enumerate(tqdm(validation_loader)):\n",
     "        inputs, labels = data\n",
     "        inputs = inputs.to(device)\n",
     "        labels = labels.to(device)\n",
