Code for 64 res runs

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -24,7 +24,7 @@
     "from torch.utils.data import DataLoader\n",
     "from sklearn.metrics import r2_score\n",
     "from Savio_Dataset import CustomDataset\n",
-    "from Networks import ConvNetScalarLabel, count_parameters\n",
+    "from Networks import ConvNetScalarLabel256, ConvNetScalarLabel64, count_parameters\n",
     "import time\n",
     "import argparse\n",
     "from tqdm import tqdm"
@@ -62,20 +62,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e0be766-26cc-41d8-a476-f652fb68d147",
+   "id": "06b3855e-1af6-4dac-a2eb-9afca254bdcd",
    "metadata": {},
    "source": [
-    "# Calculate number of parameters"
+    "# Parsing parameters"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8c7b0f4-03b1-4189-9755-486c35c73fc1",
+   "id": "e38a6355-707c-42fd-ba04-c9dd8a4f1c77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "count_parameters(ConvNetScalarLabel())"
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument('--kernel_size', type = int, required = True)\n",
+    "parser.add_argument('--activation_fn', type = str, required = True)\n",
+    "parser.add_argument('--epochs_choice', type = int, required = True)\n",
+    "parser.add_argument('--learning_rate', type = float, required = True)\n",
+    "parser.add_argument('--batch_size', type = int, required = True)\n",
+    "parser.add_argument('--resolution', type = int, required = True)\n",
+    "args = parser.parse_args()"
    ]
   },
   {
@@ -125,8 +132,8 @@
    },
    "outputs": [],
    "source": [
-    "dataset = CustomDataset(data_path = data_path, label_file_path = train_parts, transform = transform)\n",
-    "dataset_val = CustomDataset(data_path = data_path, label_file_path = val_parts, transform = transform)"
+    "dataset = CustomDataset(data_path = data_path, label_file_path = train_parts, transform = transform, resolution = args.resolution)\n",
+    "dataset_val = CustomDataset(data_path = data_path, label_file_path = val_parts, transform = transform, resolution = args.resolution)"
    ]
   },
   {
@@ -147,6 +154,24 @@
    "outputs": [],
    "source": [
     "len(dataset_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7768965-fb9e-4aec-946a-4b09550e7ae0",
+   "metadata": {},
+   "source": [
+    "# Get Model Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66289093-d3e6-414e-9796-c08aaa133a08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_class = ConvNetScalarLabel256 if args.resolution == 256 else ConvNetScalarLabel64"
    ]
   },
   {
@@ -246,7 +271,7 @@
     "    if args.activation_fn == 'Sigmoid':\n",
     "        activation_fn = nn.Sigmoid()\n",
     "    \n",
-    "    model = ConvNetScalarLabel(kernel_size = args.kernel_size, activation_fn = activation_fn).to(device)\n",
+    "    model = model_class(kernel_size = args.kernel_size, activation_fn = activation_fn).to(device)\n",
     "    print(count_parameters(model))\n",
     "    \n",
     "    optimizer = torch.optim.SGD(model.parameters(), lr = args.learning_rate, momentum = 0.9)\n",
@@ -292,7 +317,7 @@
     "        'epochs_choice': args.epochs_choice,\n",
     "        'learning_rate': args.learning_rate,\n",
     "        'batch_size': args.batch_size,\n",
-    "        'architecture': '3DCNN_256_stride1'\n",
+    "        'architecture': model_class.name\n",
     "    }\n",
     "    # initialize a wandb run\n",
     "    wandb.init(name = name, project = 'PAPER', config = config)\n",
@@ -300,30 +325,6 @@
     "    loss_fn = nn.L1Loss(reduction = 'mean')\n",
     "    model = evaluate(args, loss_fn)\n",
     "    torch.save(model, 'model.pt')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "06b3855e-1af6-4dac-a2eb-9afca254bdcd",
-   "metadata": {},
-   "source": [
-    "# Parsing parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e38a6355-707c-42fd-ba04-c9dd8a4f1c77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parser = argparse.ArgumentParser()\n",
-    "parser.add_argument('--kernel_size', type = int, required = True)\n",
-    "parser.add_argument('--activation_fn', type = str, required = True)\n",
-    "parser.add_argument('--epochs_choice', type = int, required = True)\n",
-    "parser.add_argument('--learning_rate', type = float, required = True)\n",
-    "parser.add_argument('--batch_size', type = int, required = True)\n",
-    "args = parser.parse_args()"
    ]
   },
   {
