move resolution def to config file

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -81,7 +81,6 @@
     "parser.add_argument('--epochs_choice', type = int, required = True)\n",
     "parser.add_argument('--learning_rate', type = float, required = True)\n",
     "parser.add_argument('--batch_size', type = int, required = True)\n",
-    "parser.add_argument('--resolution', type = int, required = True)\n",
     "args = parser.parse_args()"
    ]
   },
@@ -120,7 +119,8 @@
     "configs = json.load(open('Savio_config.json', 'r'))\n",
     "data_path = configs['data_path']\n",
     "train_parts = configs['train_parts']\n",
-    "val_parts = configs['val_parts']"
+    "val_parts = configs['val_parts']\n",
+    "resolution = configs['resolution']"
    ]
   },
   {
@@ -132,8 +132,8 @@
    },
    "outputs": [],
    "source": [
-    "dataset = CustomDataset(data_path = data_path, label_file_path = train_parts, transform = transform, resolution = args.resolution)\n",
-    "dataset_val = CustomDataset(data_path = data_path, label_file_path = val_parts, transform = transform, resolution = args.resolution)"
+    "dataset = CustomDataset(data_path = data_path, label_file_path = train_parts, transform = transform, resolution = resolution)\n",
+    "dataset_val = CustomDataset(data_path = data_path, label_file_path = val_parts, transform = transform, resolution = resolution)"
    ]
   },
   {
@@ -171,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_class = ConvNetScalarLabel256 if args.resolution == 256 else ConvNetScalarLabel64"
+    "model_class = ConvNetScalarLabel256 if resolution == 256 else ConvNetScalarLabel64"
    ]
   },
   {
