--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -192,6 +192,7 @@
    "outputs": [],
    "source": [
     "def train_epoch(model, training_loader, loss_fn, optimizer):\n",
+    "    model.train()\n",
     "    cumulative_loss = 0.0\n",
     "    for i, data in enumerate(tqdm(training_loader)):\n",
     "        inputs, labels = data\n",
@@ -230,20 +231,22 @@
    "outputs": [],
    "source": [
     "def validate(model, validation_loader, loss_fn):\n",
+    "    model.eval()\n",
     "    validation_loss = 0.0\n",
     "    y_true = []\n",
     "    y_pred = []\n",
-    "    for i, data in enumerate(tqdm(validation_loader)):\n",
-    "        inputs, labels = data\n",
-    "        inputs = inputs.to(device)\n",
-    "        labels = labels.to(device)\n",
-    "        outputs = model(inputs)\n",
-    "        loss = loss_fn(outputs, labels.float())\n",
-    "        validation_loss += loss.item()\n",
-    "\n",
-    "        y_true.extend(labels.cpu().numpy().tolist())\n",
-    "        y_pred.extend(outputs.cpu().detach().numpy().tolist())\n",
-    "    return validation_loss / len(validation_loader), r2_score(y_true = y_true, y_pred = y_pred)"
+    "    with torch.no_grad():\n",
+    "        for i, data in enumerate(tqdm(validation_loader)):\n",
+    "            inputs, labels = data\n",
+    "            inputs = inputs.to(device)\n",
+    "            labels = labels.to(device)\n",
+    "            outputs = model(inputs)\n",
+    "            loss = loss_fn(outputs, labels.float())\n",
+    "            validation_loss += loss.item()\n",
+    "    \n",
+    "            y_true.extend(labels.cpu().numpy().tolist())\n",
+    "            y_pred.extend(outputs.cpu().detach().numpy().tolist())\n",
+    "        return validation_loss / len(validation_loader), r2_score(y_true = y_true, y_pred = y_pred)"
    ]
   },
   {
