revert to 256 res, add inference time

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -194,12 +194,15 @@
     "def train_epoch(model, training_loader, loss_fn, optimizer):\n",
     "    model.train()\n",
     "    cumulative_loss = 0.0\n",
+    "    cumulative_time = 0.0\n",
     "    for i, data in enumerate(tqdm(training_loader)):\n",
     "        inputs, labels = data\n",
     "        inputs = inputs.to(device)\n",
     "        labels = labels.to(device)\n",
     "        labels = torch.squeeze(labels)\n",
     "\n",
+    "        tic = time.time()\n",
+    "        \n",
     "        # Zero the gradients\n",
     "        optimizer.zero_grad()\n",
     "\n",
@@ -214,11 +217,15 @@
     "        # Adjust learning weights\n",
     "        optimizer.step()\n",
     "\n",
+    "        toc = time.time()\n",
+    "\n",
     "        # Increment by the mean loss of the batch\n",
     "        cumulative_loss += loss.item()\n",
+    "\n",
+    "        cumulative_time += toc - tic\n",
     "        \n",
     "        wandb.log({'batch loss': loss.item()})\n",
-    "    return cumulative_loss / len(training_loader)"
+    "    return cumulative_loss / len(training_loader), cumulative_time / len(training_loader) * 1000"
    ]
   },
   {
@@ -246,7 +253,7 @@
     "    \n",
     "            y_true.extend(labels.cpu().numpy().tolist())\n",
     "            y_pred.extend(outputs.cpu().detach().numpy().tolist())\n",
-    "        return validation_loss / len(validation_loader), r2_score(y_true = y_true, y_pred = y_pred)"
+    "    return validation_loss / len(validation_loader), r2_score(y_true = y_true, y_pred = y_pred)"
    ]
   },
   {
@@ -283,10 +290,10 @@
     "        wandb.log({'epoch': epoch})\n",
     "        # train\n",
     "        tic = time.time()\n",
-    "        train_loss = train_epoch(model, training_loader, loss_fn, optimizer)\n",
+    "        train_loss, inference_time = train_epoch(model, training_loader, loss_fn, optimizer)\n",
     "        toc = time.time()\n",
-    "        wandb.log({'train_loss': train_loss, 'train_time': round(toc - tic)})\n",
-    "        print(f'Train loss for epoch {epoch}: {train_loss}, train time for epoch {epoch}: {round(toc - tic)}')\n",
+    "        wandb.log({'train_loss': train_loss, 'train_time': round(toc - tic), 'inference_time_batch_ms': inference_time})\n",
+    "        print(f'Train loss for epoch {epoch}: {train_loss}, train time for epoch {epoch}: {round(toc - tic)}, average inference time for batch in milliseconds: {inference_time}')\n",
     "\n",
     "        # validate\n",
     "        tic = time.time()\n",
@@ -309,7 +316,8 @@
    "source": [
     "def run(args = None):\n",
     "    training_set = train_parts[5:-5]\n",
-    "    name = f'3DCNN_{training_set}_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}'\n",
+    "    # name = f'3DCNN_{training_set}_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}'\n",
+    "    name = '3DCNN runtime testing'\n",
     "    print(name)\n",
     "\n",
     "    config = {\n",
