add inference time for validation

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -240,6 +240,7 @@
     "def validate(model, validation_loader, loss_fn):\n",
     "    model.eval()\n",
     "    validation_loss = 0.0\n",
+    "    validation_time = 0.0\n",
     "    y_true = []\n",
     "    y_pred = []\n",
     "    with torch.no_grad():\n",
@@ -247,13 +248,16 @@
     "            inputs, labels = data\n",
     "            inputs = inputs.to(device)\n",
     "            labels = labels.to(device)\n",
+    "            tic = time.time()\n",
     "            outputs = model(inputs)\n",
+    "            toc = time.time()\n",
     "            loss = loss_fn(outputs, labels.float())\n",
     "            validation_loss += loss.item()\n",
+    "            validation_time += toc - tic\n",
     "    \n",
     "            y_true.extend(labels.cpu().numpy().tolist())\n",
     "            y_pred.extend(outputs.cpu().detach().numpy().tolist())\n",
-    "    return validation_loss / len(validation_loader), r2_score(y_true = y_true, y_pred = y_pred)"
+    "    return validation_loss / len(validation_loader), validation_time / len(validation_loader) * 1000, r2_score(y_true = y_true, y_pred = y_pred)"
    ]
   },
   {
@@ -292,15 +296,15 @@
     "        tic = time.time()\n",
     "        train_loss, inference_time = train_epoch(model, training_loader, loss_fn, optimizer)\n",
     "        toc = time.time()\n",
-    "        wandb.log({'train_loss': train_loss, 'train_time': round(toc - tic), 'inference_time_batch_ms': inference_time})\n",
+    "        wandb.log({'train_loss': train_loss, 'train_time': round(toc - tic), 'train_time_batch_ms': inference_time})\n",
     "        print(f'Train loss for epoch {epoch}: {train_loss}, train time for epoch {epoch}: {round(toc - tic)}, average inference time for batch in milliseconds: {inference_time}')\n",
     "\n",
     "        # validate\n",
     "        tic = time.time()\n",
-    "        validation_loss, r2 = validate(model, validation_loader, loss_fn)\n",
+    "        validation_loss, inference_time, r2 = validate(model, validation_loader, loss_fn)\n",
     "        toc = time.time()\n",
-    "        wandb.log({'validation_loss': validation_loss, 'r2': r2, 'validate_time': round(toc - tic)})\n",
-    "        print(f'Validate loss for epoch {epoch}: {validation_loss}, r2 for epoch {epoch}: {r2}, validate time for epoch {epoch}: {round(toc - tic)}')\n",
+    "        wandb.log({'validation_loss': validation_loss, 'r2': r2, 'validate_time': round(toc - tic), 'validate_time_batch_ms': inference_time})\n",
+    "        print(f'Validate loss for epoch {epoch}: {validation_loss}, r2 for epoch {epoch}: {r2}, validate time for epoch {epoch}: {round(toc - tic)}, average inference time for batch in milliseconds: {inference_time}')\n",
     "    \n",
     "    return model"
    ]
