--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -332,7 +332,8 @@
     "        'epochs_choice': args.epochs_choice,\n",
     "        'learning_rate': args.learning_rate,\n",
     "        'batch_size': args.batch_size,\n",
-    "        'architecture': model_class.name\n",
+    "        'architecture': model_class.name,\n",
+    "        'num_parameters': count_parameters(model_class())\n",
     "    }\n",
     "    # initialize a wandb run\n",
     "    wandb.init(name = name, project = 'PAPER', config = config)\n",
