add time logging for every batch

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -222,10 +222,12 @@
     "        # Increment by the mean loss of the batch\n",
     "        cumulative_loss += loss.item()\n",
     "\n",
-    "        cumulative_time += toc - tic\n",
+    "        if i != 0:\n",
+    "            cumulative_time += toc - tic\n",
+    "            wandb.log({'inference_time_train': toc - tic})\n",
     "        \n",
     "        wandb.log({'batch loss': loss.item()})\n",
-    "    return cumulative_loss / len(training_loader), cumulative_time / len(training_loader) * 1000"
+    "    return cumulative_loss / len(training_loader), cumulative_time / (len(training_loader) - 1) * 1000"
    ]
   },
   {
@@ -253,11 +255,14 @@
     "            toc = time.time()\n",
     "            loss = loss_fn(outputs, labels.float())\n",
     "            validation_loss += loss.item()\n",
-    "            validation_time += toc - tic\n",
+    "\n",
+    "            if i != 0:\n",
+    "                validation_time += toc - tic\n",
+    "                wandb.log({'inference_time_validation': toc - tic})\n",
     "    \n",
     "            y_true.extend(labels.cpu().numpy().tolist())\n",
     "            y_pred.extend(outputs.cpu().detach().numpy().tolist())\n",
-    "    return validation_loss / len(validation_loader), validation_time / len(validation_loader) * 1000, r2_score(y_true = y_true, y_pred = y_pred)"
+    "    return validation_loss / len(validation_loader), validation_time / (len(validation_loader) - 1) * 1000, r2_score(y_true = y_true, y_pred = y_pred)"
    ]
   },
   {
