except the first 10 batches

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -222,9 +222,9 @@
     "        # Increment by the mean loss of the batch\n",
     "        cumulative_loss += loss.item()\n",
     "\n",
-    "        if i != 0:\n",
+    "        if i > 10:\n",
     "            cumulative_time += toc - tic\n",
-    "            wandb.log({'inference_time_train': toc - tic})\n",
+    "            wandb.log({'inference_time_train_ms': (toc - tic) * 1000})\n",
     "        \n",
     "        wandb.log({'batch loss': loss.item()})\n",
     "    return cumulative_loss / len(training_loader), cumulative_time / (len(training_loader) - 1) * 1000"
@@ -256,9 +256,9 @@
     "            loss = loss_fn(outputs, labels.float())\n",
     "            validation_loss += loss.item()\n",
     "\n",
-    "            if i != 0:\n",
+    "            if i > 10:\n",
     "                validation_time += toc - tic\n",
-    "                wandb.log({'inference_time_validation': toc - tic})\n",
+    "                wandb.log({'inference_time_validation_ms': (toc - tic) * 1000})\n",
     "    \n",
     "            y_true.extend(labels.cpu().numpy().tolist())\n",
     "            y_pred.extend(outputs.cpu().detach().numpy().tolist())\n",
