--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -338,7 +338,7 @@
     "        'learning_rate': args.learning_rate,\n",
     "        'batch_size': args.batch_size,\n",
     "        'architecture': model_class.name,\n",
-    "        'num_parameters': count_parameters(model_class())\n",
+    "        'num_parameters': count_parameters(model_class(kernel_size = args.kernel_size))\n",
     "    }\n",
     "    # initialize a wandb run\n",
     "    wandb.init(name = name, project = 'PAPER', config = config)\n",
