add load time logging

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -195,7 +195,12 @@
     "    model.train()\n",
     "    cumulative_loss = 0.0\n",
     "    cumulative_time = 0.0\n",
+    "    cumulative_load_time = 0.0\n",
+    "    load_start = time.time()\n",
     "    for i, data in enumerate(tqdm(training_loader)):\n",
+    "        load_end = time.time()\n",
+    "        cumulative_load_time += load_end - load_start\n",
+    "        wandb.log({'load_time_train_ms': (load_end - load_start) * 1000})\n",
     "        inputs, labels = data\n",
     "        inputs = inputs.to(device)\n",
     "        labels = labels.to(device)\n",
@@ -227,7 +232,8 @@
     "            wandb.log({'inference_time_train_ms': (toc - tic) * 1000})\n",
     "        \n",
     "        wandb.log({'batch loss': loss.item()})\n",
-    "    return cumulative_loss / len(training_loader), cumulative_time / (len(training_loader) - 10) * 1000"
+    "        load_start = time.time()\n",
+    "    return cumulative_loss / len(training_loader), cumulative_time / (len(training_loader) - 10) * 1000, cumulative_load_time / len(training_loader) * 1000"
    ]
   },
   {
@@ -299,9 +305,9 @@
     "        wandb.log({'epoch': epoch})\n",
     "        # train\n",
     "        tic = time.time()\n",
-    "        train_loss, inference_time = train_epoch(model, training_loader, loss_fn, optimizer)\n",
+    "        train_loss, inference_time, load_time = train_epoch(model, training_loader, loss_fn, optimizer)\n",
     "        toc = time.time()\n",
-    "        wandb.log({'train_loss': train_loss, 'train_time': round(toc - tic), 'train_time_batch_ms': inference_time})\n",
+    "        wandb.log({'train_loss': train_loss, 'train_time': round(toc - tic), 'train_time_batch_ms': inference_time, 'load_time_batch_ms': load_time})\n",
     "        print(f'Train loss for epoch {epoch}: {train_loss}, train time for epoch {epoch}: {round(toc - tic)}, average inference time for batch in milliseconds: {inference_time}')\n",
     "\n",
     "        # validate\n",
