refactoring, switch to normal runs

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -331,8 +331,8 @@
    "source": [
     "def run(args = None):\n",
     "    training_set = train_parts[5:-5]\n",
-    "    # name = f'3DCNN_{training_set}_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}'\n",
-    "    name = '3DCNN runtime testing'\n",
+    "    name = f'3DCNN_{training_set}_{args.kernel_size}_{args.activation_fn}_{args.epochs_choice}_{args.learning_rate}_{args.batch_size}'\n",
+    "    # name = '3DCNN runtime testing'\n",
     "    print(name)\n",
     "\n",
     "    config = {\n",
@@ -343,7 +343,7 @@
     "        'epochs_choice': args.epochs_choice,\n",
     "        'learning_rate': args.learning_rate,\n",
     "        'batch_size': args.batch_size,\n",
-    "        'architecture': model_class.name,\n",
+    "        'architecture': model_class.arch,\n",
     "        'num_parameters': count_parameters(model_class(kernel_size = args.kernel_size))\n",
     "    }\n",
     "    # initialize a wandb run\n",
