change wandb log location

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -120,7 +120,8 @@
     "data_path = configs['data_path']\n",
     "train_parts = configs['train_parts']\n",
     "val_parts = configs['val_parts']\n",
-    "resolution = configs['resolution']"
+    "resolution = configs['resolution']\n",
+    "wandb_path = configs['wandb_path']"
    ]
   },
   {
@@ -347,7 +348,7 @@
     "        'num_parameters': count_parameters(model_class(kernel_size = args.kernel_size))\n",
     "    }\n",
     "    # initialize a wandb run\n",
-    "    wandb.init(name = name, project = 'PAPER', config = config)\n",
+    "    wandb.init(name = name, project = 'PAPER', config = config, dir = wandb_path)\n",
     "    \n",
     "    loss_fn = nn.L1Loss(reduction = 'mean')\n",
     "    model = evaluate(args, loss_fn)\n",
