add baseline mlp

--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -24,7 +24,7 @@
     "from torch.utils.data import DataLoader\n",
     "from sklearn.metrics import r2_score\n",
     "from Savio_Dataset import CustomDataset\n",
-    "from Networks import ConvNetScalarLabel256, ConvNetScalarLabel64, count_parameters\n",
+    "from Networks import ConvNetScalarLabel256, ConvNetScalarLabel64, MLPBaseline64, count_parameters\n",
     "import time\n",
     "import argparse\n",
     "from tqdm import tqdm"
@@ -172,7 +172,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_class = ConvNetScalarLabel256 if resolution == 256 else ConvNetScalarLabel64"
+    "if resolution == 256:\n",
+    "    model_class = ConvNetScalarLabel256\n",
+    "if resolution == 64:\n",
+    "    model_class = ConvNetScalarLabel64\n",
+    "if resolution == 0:\n",
+    "    model_class = MLPBaseline64"
    ]
   },
   {
