--- a/3DCNN/Savio_3D_CNN.ipynb
+++ b/3DCNN/Savio_3D_CNN.ipynb
@@ -121,7 +121,8 @@
     "train_parts = configs['train_parts']\n",
     "val_parts = configs['val_parts']\n",
     "resolution = configs['resolution']\n",
-    "wandb_path = configs['wandb_path']"
+    "wandb_path = configs['wandb_path']\n",
+    "baseline = configs['baseline']"
    ]
   },
   {
@@ -172,12 +173,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if resolution == 256:\n",
-    "    model_class = ConvNetScalarLabel256\n",
-    "if resolution == 64:\n",
-    "    model_class = ConvNetScalarLabel64\n",
-    "if resolution == 0:\n",
-    "    model_class = MLPBaseline64"
+    "if baseline = 0:\n",
+    "    if resolution == 256:\n",
+    "        model_class = ConvNetScalarLabel256\n",
+    "    if resolution == 64:\n",
+    "        model_class = ConvNetScalarLabel64\n",
+    "if baseline == 1:\n",
+    "    if resolution == 64:\n",
+    "        model_class = MLPBaseline64"
    ]
   },
   {
